--- a/config/polybar/config
+++ b/config/polybar/config
@@ -83,14 +83,14 @@ label-urgent-padding = 2
 
 [module/cpu]
 type = internal/cpu
-interval = 1
+interval = 2
 format = <label>
 format-underline = ${colors.underline}
 label = %percentage-cores%
 
 [module/memory]
 type = internal/memory
-interval = 2
+interval = 5
 format = <label>
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.underline} 
@@ -152,6 +152,7 @@ label-full = Full
 
 [module/temperature]
 type = internal/temperature
+interval = 5
 thermal-zone = 0
 warn-temperature = 60
 
@@ -161,7 +162,7 @@ format-warn = <label-warn>
 format-warn-underline = ${colors.underline}
 
 label = %temperature%
-label-warn = %temperature%
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 [module/date]
