--- a/config/i3/config
+++ b/config/i3/config
@@ -33,7 +33,6 @@ bindsym $mod+Shift+Return exec urxvtc
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec rofi -show run -lines 6 -eh 1 -width 100 -padding 300 -opacity "90" -bw 0 -bc "$base01" -bg "$base02" -fg "$base07" -hlbg "$base05" -columns 1 -font "IPAexGothic 25" -hlfg "#9575cd"
 bindsym $mod+d exec --no-startup-id "rofi -show"
 
 # change focus
@@ -141,6 +140,17 @@ bindsym $mod+Ctrl+l exec --no-startup-id i3lock -p default -n -f -e -c 006F86 -i
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# external display
+mode "ex_display" {
+    bindsym e exec --no-startup-id xrandr --output DP1 --mode 1920x1080 --right-of eDP1
+    bindsym f exec --no-startup-id xrandr --output DP1 --off
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
+    bindsym Ctrl+k mode "default"
+}
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -168,5 +178,6 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+bindsym $mod+n mode "ex_display"
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh
