--- a/config/polybar/config
+++ b/config/polybar/config
@@ -59,11 +59,13 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
+enable-click = false
+enable-scroll = false
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${colors.background}
-label-focused-foreground = ${colors.foreground}
+label-focused-foreground = ${colors.underline-warn}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
@@ -74,8 +76,8 @@ label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
-label-visible-background = ${colors.background-alt}
-label-visible-foreground = ${colors.foreground-alt}
+label-visible-background = ${colors.background}
+label-visible-foreground = ${colors.foreground}
 label-visible-padding = 2
 
 ; urgent = Workspace with urgency hint set
