--- a/vim/rc/dein_lazy.toml
+++ b/vim/rc/dein_lazy.toml
@@ -4,6 +4,17 @@
 repo = 'andviro/flake8-vim'
 on_ft = 'python'
 
+#[[plugins]]
+#repo = 'zchee/deoplete-jedi'
+#depends = ['deoplete.nvim']
+#on_ft = 'python'
+#hook_post_update = '''
+#    let g:dein#plugin.build = "pip install jedi"
+#'''
+#hook_add = '''
+#    let g:deoplete#sources#jedi#python_path = '/usr/bin/python3.7'
+#'''
+
 [[plugins]]
 repo = 'davidhalter/jedi-vim'
 on_ft = 'python'
@@ -35,6 +46,9 @@ hook_post_source = '''
 [[plugins]]
 repo = 'Shougo/neocomplete'
 on_if = 1
+#[[plugins]]
+#repo = 'Shougo/deoplete.nvim'
+#on_if = 1
 
 [[plugins]]
 repo = 'thinca/vim-quickrun'
