--- a/config/i3/config
+++ b/config/i3/config
@@ -143,7 +143,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # external display
 mode "ex_display" {
     bindsym e exec --no-startup-id xrandr --output DP1 --auto --scale 2x2 --right-of eDP1
-    bindsym f exec --no-startup-id xrandr --output DP1 --off
+    bindsym d exec --no-startup-id xrandr --output DP1 --off
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
