--- a/config/polybar/config
+++ b/config/polybar/config
@@ -18,7 +18,7 @@ margin-bottom = 0
 [bar/i3]
 bottom = false
 width = 100%
-height = 35
+height = 2%
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -47,8 +47,7 @@ modules-right = cpu memory wlan backlight alsa battery temperature date
 
 tray-position = right
 tray-padding = 2
-tray-transparent = true
-tray-background = #0063ff
+tray-background = ${colors.background}
 
 [module/xwindow]
 type = internal/xwindow
