--- a/config/i3/config
+++ b/config/i3/config
@@ -117,6 +117,8 @@ bindsym XF86AudioMute exec "amixer set Master toggle"
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 2"
 bindsym XF86MonBrightnessDown exec "xbacklight -dec 2"
 bindsym $mod+t exec "xinput set-prop 'SynPS/2 Synaptics TouchPad' --type=int --format=8 'Device Enabled' `echo $((($(xinput list-props 16 | grep 'Device Enabled' | tail -c 2)-1)**2))`"
+bindsym $mod+v exec "anamnesis --browser"
+bindsym $mod+shift+v exec "anamnesis --cleanup"
 
 # UI setting
 new_window 1pixel
@@ -132,9 +134,6 @@ exec_always --no-startup-id feh --bg-scale ~/work/pict/wallpaper/blue-block.jpg 
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-
-# Lock i3
-bindsym $mod+Ctrl+l exec --no-startup-id i3lock -p default -n -f -e -c 006F86 -i ~/work/pict/wallpaper/lock.png
 
 # external display
 mode "ex_display" {
