--- a/config/i3/config
+++ b/config/i3/config
@@ -130,6 +130,10 @@ gaps outer 3
 # set background
 exec_always --no-startup-id feh --bg-scale ~/work/pict/wallpaper/blue-block.jpg && mv ~/.fehbg ~/.config/.fehbg
 
+# exec anamnesis
+exec_always --no-startup-id anamnesis --start
+
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
