--- a/config/git/config
+++ b/config/git/config
@@ -11,22 +11,26 @@
 [init]
 	defaultBranch = main
 [alias]         
+    a = add
+    b = branch
+    d = diff
+    p = push
+    ps = push
+    pl = pull -r
+    sh = show
+    c = commit
+    cm = commit -m
+    co = checkout
+    s = status -s
+    ss = status
+    l = log --graph --decorate --pretty=oneline --abbrev-commit
+    rb = rebase
+    st = stash
+    o = browse-remote
+    pr = browse-remote --pr
     fixit = commit --amend --no-edit
     com = "!f() { remote_head=$(git symbolic-ref refs/remotes/origin/HEAD 2>/dev/null); remote_head=${remote_head#refs/remotes/origin/}; git checkout ${remote_head:-master}; }; f"
     r = !git reflog | head -n 200 | PLENV_VERSION=system perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'
-    o = browse-remote
-    pr = browse-remote --pr
-    sha = "!f() { git rev-parse \"${1-HEAD}\"; }; f"
-    s = status
-    ss = status -s
-    b = branch
-    l = log
-    cm = commit
-    co = checkout
-    rb = rebase
-    st = stash
-    sh = show
-    pr = pull -r
-    ps = push
+    sha = "!f()k{ git rev-parse \"${1-HEAD}\"; }; f"
+    ck = "!f() { [ $# -eq 0 ] && git checkout $(git branch --sort=-authordate | perl -a -nle '$F[0] ne \"*\" and print $F[0]' | fzf --height 40%) || git checkout $@; }; f"
     alias = !git config --get-regexp '^alias\\.' | sed 's/alias\\.\\([^ ]*\\) \\(.*\\)/\\1\\\t => \\2/' | sort
-    df = diff
